pypet 0.1b.7

*   StreamToLogger has moved to the pypetlogging.py module. The mplogging module was
    deleted.

*   The Network Manager now accepts custom Network Constructor

*   A SingleRun can now provide a `v_filename` and `v_as_run` property.
    Both cannot be changed and the latter simply returns the name of the run.

pypet 0.1b.6

*   The storage service prints status updates for loading and storing trees

*   v_as_run is not longer `None` for a trajectory but `run_ALL`

*   The Queue storage writer now stores batches of single runs to avoid
    re-opening of files as much as possible

*   Faster Loading of data

*   Support for PyTables 3.1.1

*   *pypet* stores the name of the main script as a config parameter

*   Data of Parameters can be accessed via `.data` or `param['data']`.
    Same holds for results that only contain a single data item.

*   Parameters provide the function `f_get_default` to return the default value
    if the parameter is not empty.

*   Large dictionaries and Object Tables are now split into chunks of 512 items

*   In case an object table has more than 32 columns, another table is created to
    store the data item types (which is faster than storing all of the types as
    hdf5 node attributes)

pypet 0.1b.5

*   New auto load feature

*   BUG FIX: When parameters are emptied, the default value is set to None (and no longer kept)

*   Now items are only saved once, if the node already exist on disk, storage is refused
    (Previously new data was added if it was not within the leaf before, but this can lead to
    strange inconsistencies).

*   BUG FIX: `f_has_children` of a group node, now returns the correct result

*   Refactored continuing of trajectories. Now this is based on `dill` and works also
    with data that cannot be pickled. `f_continue_run` is renamed `f_continue` to emphasize
    this change in API

*   Picking the search strategy and using `v_check_uniqueness` is no longer supported.