@@ -5,13 +5,16 @@ python:
 
 env:
   matrix:
-    - PANDAS_VERSION=0.12.0 TABLES_VERSION=2.3.1 NUMEXPR_VERSION=1.4.1 CYTHON_VERSION=0.13.0 COVERAGE=OFF
-    - PANDAS_VERSION=0.12.0 TABLES_VERSION=3.1.1 NUMEXPR_VERSION=2.4 CYTHON_VERSION=0.20.1 COVERAGE=OFF
+    - PANDAS_VERSION=0.12.0 TABLES_VERSION=2.3.1 NUMEXPR_VERSION=1.4.1 CYTHON_VERSION=0.13.0 COVERAGE=OFF GIT_TEST=OFF
+    - PANDAS_VERSION=0.12.0 TABLES_VERSION=3.1.1 NUMEXPR_VERSION=2.4 CYTHON_VERSION=0.20.1 COVERAGE=OFF GIT_TEST=OFF
 
 matrix:
   include:
     - python: "2.7_with_system_site_packages"
-      env: PANDAS_VERSION=0.12.0 TABLES_VERSION=3.1.1 NUMEXPR_VERSION=2.2.2 CYTHON_VERSION=0.19.1 COVERAGE=ON
+      env: PANDAS_VERSION=0.12.0 TABLES_VERSION=3.1.1 NUMEXPR_VERSION=2.2.2 CYTHON_VERSION=0.19.1 COVERAGE=ON GIT_TEST=OFF
+    - python: "2.7_with_system_site_packages"
+      env: PANDAS_VERSION=0.12.0 TABLES_VERSION=3.1.1 NUMEXPR_VERSION=2.2.2 CYTHON_VERSION=0.19.1 COVERAGE=OFF GIT_TEST=ON
+
 
 # Install dependencies for PyTables
 # command to install dependencies
@@ -44,12 +47,12 @@ install:
   - echo "+++++++++++ Dealing with Issue 155 +++++++++++"
   - sudo rm -rf /dev/shm && sudo ln -s /run/shm /dev/shm
 #  - echo "+++++++++++ Installing dill ++++++++++++"
-#  - pip install --pre dill
+#  - pip install dill
   - echo "+++++++++++ Installing PYPET +++++++++++"
   - pip install .
   - echo "+++++++++++ FINISHED INSTALL +++++++++++"
 # Script command for all tests
-script: if [[ $COVERAGE == ON ]]; then coverage run --parallel-mode --timid --source=pypet --omit=pypet/brian/*,pypet/tests/* -m pypet.tests.all_single_core_tests; coverage combine; else python ./pypet/tests/all_tests.py; fi
+script: chmod +x runtests.sh; sh runtests.sh
 after_success: if [[ $COVERAGE == ON ]]; then coveralls --verbose; fi
 branches:
   only:
